--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Dev1",
+  "name": "wonderflow1",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,20 +7,20 @@
   },
   "dependencies": {
     "express": "4.x",
+    "express-session": "*",
     "mongodb": "1.4.4",
-    "mongoskin": "~1.4.1",
     "mongoose": "*",
+    "mongoskin": "~1.4.1",
+    "monk": "^6.0.5",
+    "morgan": "~1.6.1",
     "scribe-js": "*",
-    "dateformat": "*",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "dateformat": "*",
     "debug": "~2.2.0",
     "jade": "~1.11.0",
-    "monk": "^1.0.1",
-    "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "express-session": "*",
-    "json2md": "*",
-    "markdown": "*"
+    "markdown": "*",
+    "json2md": "*"
   }
 }
