--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "4.x",
-    "express-session": "*",
-    "mongodb": "1.4.4",
-    "mongoose": "*",
-    "mongoskin": "~1.4.1",
-    "monk": "^6.0.5",
-    "morgan": ">=1.9.1",
-    "scribe-js": "*",
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "dateformat": "*",
-    "debug": ">=2.6.9",
-    "jade": "~1.11.0",
-    "serve-favicon": "~2.3.0",
-    "markdown": "*",
-    "json2md": "*"
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
+    "dateformat": "^3.0.3",
+    "debug": "^4.1.1",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "json2md": "^1.6.3",
+    "markdown": "^0.5.0",
+    "mongodb": "^3.2.3",
+    "mongoose": "^5.5.2",
+    "mongoskin": "^2.1.0",
+    "monk": "^6.0.6",
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3",
+    "scribe-js": "^2.0.4",
+    "serve-favicon": "^2.5.0"
   }
 }
